src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.logo {
  height: 40px;
  padding-right: 12px;
}

.largeLogo {
  width: 100%;
}

.content {
  width: 100%;
  margin-bottom: 10px;
}

.gradient {
  background: linear-gradient(342deg, #ceb55f 0%, #000000 50%);
  width: 100%;
}

@media screen and (max-width: 768px) {
  .gradient {
    display: none;
  }
  .display-1 {
    font-size: 3rem !important;
  }

  .display-4 {
    font-size: 1.5rem !important;
  }
}

#nav {
  background: black;
  opacity: 90%;
  position: sticky;
  width: 100%;
}

#header-text {
  color: white;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

